--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@
     <h3>Crash Diagnostics (MetricKit)</h3>
     <p>The App uses Apple's built-in MetricKit framework to receive crash and hang diagnostics for stability improvements. This data is processed locally on your device. When you have "Share with App Developers" or "Share iPhone Analytics" enabled in iOS Settings, similar diagnostic data may be shared with Apple and made available to developers through Xcode Organizer. We do not send this data to our own servers.</p>
 
+    <h3>Changes to This Privacy Policy</h3>
+    <p>We may update this Privacy Policy from time to time. Any changes will be reflected with an updated "Last updated" date at the top of this document. Continued use of the App after changes constitutes acceptance of the updated policy.</p>
+
     <h3>Contact</h3>
     <div class="contact-box">
         <p>Questions or concerns about this Privacy Policy?</p>
@@ -323,13 +326,19 @@
     <p>The App does not claim to be a religious authority. Content is curated from publicly available traditional texts and common devotional practices. The App is not affiliated with any specific temple, religious organization, sampradaya, or spiritual lineage.</p>
     <p>Users are encouraged to consult qualified religious scholars, pandits, or their own guru for authoritative guidance.</p>
 
+    <h3>No Financial Transactions Disclaimer</h3>
+    <p>Any voluntary contributions or in-app purchases offered through the App are considered voluntary support for the continued development of the App. <strong>No goods, services, or spiritual outcomes are guaranteed</strong> in exchange for such contributions. Donations and tips are offered in good faith as seva (service) and are non-refundable except as required by applicable law.</p>
+
+    <h3>Not Medical Advice</h3>
+    <p>The App does not provide medical, psychological, or health advice. Spiritual practices described in the App — including chanting, fasting, meditation, and devotional routines — are voluntary and undertaken at the user's discretion. Consult your healthcare provider before making changes to your diet, exercise, or lifestyle based on any fasting or practice guidelines referenced in the App.</p>
+
     <h3>Limitation of Liability</h3>
     <p>To the fullest extent permitted by applicable law:</p>
     <ol>
         <li><strong>No warranties</strong> — The App and all its content are provided <strong>"as is"</strong> and <strong>"as available"</strong>, without warranties of any kind, either express or implied.</li>
-        <li><strong>No liability for content</strong> — The developers shall not be held liable for any claims, damages, or legal actions arising from errors in content, any interpretation or use of content, any offense or hurt sentiment from content presentation, or reliance on Panchang data or fasting guidelines.</li>
-        <li><strong>No legal claims for content</strong> — By using the App, you agree that no legal challenge or claim may be brought against the developers based on the religious or spiritual content provided.</li>
-        <li><strong>Indemnification</strong> — You agree to indemnify and hold harmless the developers from any claims, liabilities, damages, costs, and expenses arising from your use of the App.</li>
+        <li><strong>No liability for content</strong> — The developers shall not be held liable for any claims, damages, or legal actions arising from: errors or inaccuracies in content; any interpretation or use of content; any offense, hurt sentiment, or disagreement from content presentation; or reliance on Panchang data, tithi calculations, muhurat timings, or fasting guidelines.</li>
+        <li><strong>Waiver of claims for content</strong> — To the fullest extent permitted by law, users waive the right to bring claims against the developers arising solely from religious or spiritual content presented in the App.</li>
+        <li><strong>Indemnification</strong> — You agree to indemnify and hold harmless the developers from any claims, liabilities, damages, costs, and expenses (including legal fees) arising from your use of the App or any dispute related to its content.</li>
     </ol>
 
     <h3>Intellectual Property</h3>
@@ -337,10 +346,14 @@
         <li>Scripture texts (Ramcharitmanas, Bhagavad Gita, Vedas, Upanishads, etc.) are ancient texts in the public domain</li>
         <li>Aarti and chalisa lyrics are traditional devotional compositions in the public domain</li>
         <li>App design, code, and curation are the intellectual property of the App's developers</li>
+        <li>The Om (ॐ) symbol and other religious symbols used are universal sacred symbols and are not claimed as trademarks</li>
     </ul>
 
+    <h3>Arbitration</h3>
+    <p>Any disputes arising from use of the App shall be resolved through <strong>binding arbitration</strong> in the State of California, rather than in court, except where prohibited by law.</p>
+
     <h3>Governing Law</h3>
-    <p>This disclaimer shall be governed by the laws of the United States of America and the State of California.</p>
+    <p>This disclaimer shall be governed by and construed in accordance with the laws of the United States of America and the State of California, without regard to conflict of law principles.</p>
 
     <h3>Acceptance</h3>
     <p>By downloading, installing, or using the Sadhana app, you acknowledge that you have read, understood, and agree to this Privacy Policy, Content Disclaimer, and Terms of Use.</p>
